@@ -223,10 +223,14 @@ class UrlConversionTest(TestCase):
     def test_url_unescape_uri(self):
         self.assertEquals("http://svn.gnome.org/svn/gtk+/trunk",
                 _url_unescape_uri("http://svn.gnome.org/svn/gtk%2B/trunk"))
+        self.assertEquals("http://svn.gnome.org/svn/gtk%20/trunk",
+                _url_unescape_uri("http://svn.gnome.org/svn/gtk%20/trunk"))
 
     def test_url_escape_uri(self):
         self.assertEquals("http://svn.gnome.org/svn/gtk+/trunk",
                 _url_escape_uri("http://svn.gnome.org/svn/gtk+/trunk"))
+        self.assertEquals("http://svn.gnome.org/svn/gtk%20/trunk",
+                _url_escape_uri("http://svn.gnome.org/svn/gtk /trunk"))
 
     def test_url_join_unescaped_path(self):
         self.assertEquals("http://svn.gnome.org/svn/gtk+/trunk",
